@@ -22,7 +22,7 @@ protected:
 	virtual void OnFileOpen();
 	virtual void OnFileSaveAs();
 	virtual void SetupToolbar();
-	virtual LRESULT WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam);
+	virtual LRESULT WndProc(UINT uMsg, WPARAM wParam, LPARAM lParam);
 
 private:
 	CView m_View;
