@@ -2,6 +2,16 @@ Version 6.6
 ===========
 Changes
 -------
+* The number of arguments have changed for WndProc and WndProcDefault.
+  - The HWND paramater has been dropped in both of these functions. It's
+    presence was redundant and possibly confusing. Users will need to modify
+    their WndProc and WndProc functions accordingly. The m_hWnd member variable
+    can be used in place of hwnd in the WndProc function.
+* The number of arguments have changed for DialogProc and DialogProcDefault.
+  - The HWND paramater has been dropped in both of these functions. It's
+    presence was redundant and possibly confusing. Users will need to modify
+    their WndProc and WndProc functions accordingly. The m_hWnd member variable
+    can be used in place of hwnd in the WndProc function.  
 * Enhancements to docking, containers and tabs.
   - By default the dockers are immediately resized while the splitter bar is 
      being dragged. To defer resizing until the splitter bar is released, use
